--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -9,3 +9,21 @@
   margin-right: auto;
 }
 */
+
+.center {
+  text-align: center;
+}
+
+.login {
+  height: 40px;
+  width: 150px;
+  position: fixed;
+  top: 10px;
+  right: 30px;
+  /*background-color: blue;*/
+}
+
+.home-search-box {
+  height: 200px;
+  padding-top: 80px;
+}
