--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,13 +8,7 @@
     = csrf_meta_tags
 
   %body 
+    .login
     .container
-      .row
-        .span-12
-        %h1 Quero Um Professor!
-      .row
-        .span12
-          = yield
+      = yield
           
-    #container
-    #footer
