Added login buttons and improved layout.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,11 @@
     = csrf_meta_tags
 
   %body 
-    .login
+    /
+      .login
+        = image_tag "social-twitter-box-blue-icon.png"
+        = image_tag "social-facebook-box-blue-icon.png"
+        = image_tag "GMail-icon.png"
     .container
       = yield
           
