--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -21,9 +21,24 @@
   top: 10px;
   right: 30px;
   /*background-color: blue;*/
+  img {
+    width: 40px;
+    height: 40px;
+  }
+}
+.login-icons {
+  img {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .home-search-box {
-  height: 200px;
+  height: 150px;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 80px;
+  /*background-color: #D7DFDA;*/
 }
+
