--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
   %body
     .login
       %h1
-        =session[:id]
+        =session[:teacher]
         %a{:href => "/auth/twitter"} Twitter
     .container
       = yield
