--- a/app/views/teachers/home.html.haml
+++ b/app/views/teachers/home.html.haml
@@ -10,9 +10,9 @@
 %hr
 
 %p.center
-  É um professor e quer anunciar? Escolha sua forma de login: 
+  É um professor e quer anunciar? Escolha sua forma de login:
   %span.login-icons
-    =image_tag "social-twitter-box-blue-icon.png"
+    = link_to image_tag("social-twitter-box-blue-icon.png"), "/auth/twitter"
     =image_tag "social-facebook-box-blue-icon.png"
     =image_tag "GMail-icon.png"
 
