--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 
     /
       .login
-        %a{:href => "/auth/twitter"}= image_tag "social-twitter-box-blue-icon.png"
+        = link_to image_tag("social-twitter-box-blue-icon.png"), "/auth/twitter"
         = image_tag "social-facebook-box-blue-icon.png"
         = image_tag "GMail-icon.png"
     .container
