Improved teachers home layout. Implemented autocomplete.

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -10,10 +10,11 @@
 }
 */
 
+.ui-autocomplete-loading { background: white url('images/ui-anim_basic_16x16.gif') right center no-repeat; }
+
 .center {
   text-align: center;
 }
-
 .login {
   height: 40px;
   width: 150px;
