--- a/app/views/teachers/home.html.haml
+++ b/app/views/teachers/home.html.haml
@@ -1,5 +1,5 @@
-.hero-unit.center
-  %h1 Quero Um Professor
+.center
+  = image_tag "queroumprofessor.png"
   %h3 Encontre seu professor particular com rapidez
 
 =form_tag "/teachers/search_results" do
