--- a/app/views/teachers/home.html.haml
+++ b/app/views/teachers/home.html.haml
@@ -17,5 +17,5 @@
   %span.login-icons
     = link_to image_tag("social-twitter-box-blue-icon.png"), "/auth/twitter"
     =image_tag "social-facebook-box-blue-icon.png"
-    =image_tag "GMail-icon.png"
+    = link_to image_tag("GMail-icon.png"), "/auth/gmail"
 
