--- a/app/assets/stylesheets/teachers.css.scss
+++ b/app/assets/stylesheets/teachers.css.scss
@@ -5,7 +5,26 @@
 
 /* css */
 
+.search_fields {
+}
+
+.min_search_bar {
+  width: 100%;
+  height: 40px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #D7DFDA;
+  padding-top: 10px;
+  padding-left: 50px;
+  text-align:left;
+}
+
 .home-header {
   text-align: right;
+}
+
+.home-search-box {
+  text-align: center;
 }
 
