Logo is bigger now.

--- a/app/views/teachers/home.html.haml
+++ b/app/views/teachers/home.html.haml
@@ -1,5 +1,5 @@
 .center
-  = image_tag "queroumprofessor.png"
+  = image_tag "queroumprofessor44.png"
   %h3 Encontre seu professor particular com rapidez
 
 .home-header
