--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -15,6 +15,7 @@
 .center {
   text-align: center;
 }
+
 .login {
   height: 40px;
   width: 150px;
@@ -39,7 +40,7 @@
   width: 700px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 80px;
+  /*padding-top: 80px;*/
   /*background-color: #D7DFDA;*/
 }
 
