--- a/app/views/teachers/home.html.haml
+++ b/app/views/teachers/home.html.haml
@@ -8,6 +8,9 @@
 
 .home-search-box
   #messages
+    -if flash[:notice]
+      .alert.alert-success
+        = flash[:notice]
   = render :partial => 'search_fields'
 
 %hr
@@ -18,4 +21,7 @@
     = link_to image_tag("social-twitter-box-blue-icon.png"), "/auth/twitter"
     =image_tag "social-facebook-box-blue-icon.png"
     = link_to image_tag("GMail-icon.png"), "/auth/google_oauth2"
+  -if session[:teacher_id]
+    %br
+    = link_to "Editar perfil", edit_teacher_path(session[:teacher_id])
 
