--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -16,3 +16,15 @@
   text-align: center;
 }
 
+.left-float {
+  float: left;
+}
+
+.right-float {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
