Added kaminari for pagination. Lacks css adjustments.

--- a/app/views/teachers/search_results.html.haml
+++ b/app/views/teachers/search_results.html.haml
@@ -16,3 +16,7 @@
   - @teachers.each do |teacher|
     =render :partial => "teacher_info", :locals => {:teacher => teacher}
 
+  .clear
+    %br
+    = paginate @teachers
+
