--- a/app/views/teachers/home.html.haml
+++ b/app/views/teachers/home.html.haml
@@ -1,6 +1,5 @@
-.center
-  = image_tag "queroumprofessor44.png"
-  %h3 Encontre seu professor particular com rapidez
+:css
+  .footer { position: fixed; bottom: 0; }
 
 .home-header
   - if session[:teacher]
