--- a/app/assets/stylesheets/teachers.css.scss
+++ b/app/assets/stylesheets/teachers.css.scss
@@ -6,6 +6,8 @@
 /* css */
 
 .search_fields {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .min_search_bar {
@@ -28,7 +30,9 @@
 
 .home-header {
   text-align: right;
-  margin-bottom: 100px;
+  position: fixed;
+  right: 100px;
+  top: 200px;
 }
 
 .home-search-box {
