--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,17 +15,24 @@
         = image_tag "GMail-icon.png"
 
     .container
-      = yield
 
-    .footer
-      %p.center
-        É um professor e quer anunciar? Escolha sua forma de login:
-        %span.login-icons
-          = link_to image_tag("social-twitter-box-blue-icon.png"), "/auth/twitter"
-          =image_tag "social-facebook-box-blue-icon.png"
-          = link_to image_tag("GMail-icon.png"), "/auth/google_oauth2"
-        -if session[:teacher_id]
-          %br
-          = link_to "Editar perfil", edit_teacher_path(session[:teacher_id])
+      .header
+        = link_to image_tag("queroumprofessor44.png"), teachers_home_path
+        %h3 Encontre seu professor particular com rapidez
+
+      .content
+        = yield
+
+      .footer
+        %p.center
+          -if session[:teacher_id]
+            %br
+            = link_to "Editar perfil", edit_teacher_path(session[:teacher_id])
+          -else
+            É um professor e quer anunciar? Escolha sua forma de login:
+            %span.login-icons
+              = link_to image_tag("social-twitter-box-blue-icon.png"), "/auth/twitter"
+              =image_tag "social-facebook-box-blue-icon.png"
+              = link_to image_tag("GMail-icon.png"), "/auth/google_oauth2"
 
 
