--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -6,27 +6,37 @@
   overflow-y: auto;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   width: 80%;
-  height: 100%;
+  min-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
 }
 
 .header {
   width: 100%;
   margin-bottom: 50px;
+  padding-top: 60px;
   text-align: center;
 }
 
 .content {
-  //min-height: 600px;
-  margin-bottom: 50px;
+  padding-top: 60px;
+  padding-bottom: 100px;
 }
 
 .footer {
   width: 100%;
   height: 100px;
-  //position: fixed;
-  //bottom: 0;
+  position: absolute;
+  bottom: 0;
   background-color: #000000;
   color: white;
   padding-top: 10px;
