--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,8 +18,8 @@
       .content
         = yield
 
-      .footer
-        %p.center
+      .footer.center
+        %div
           -if session[:teacher_id]
             %br
             = (link_to "Editar perfil#{' (Ainda sem especialidades cadastradas)' if current_user && !current_user.specialities.any?}", edit_teacher_path(session[:teacher_id])) + "  |  " + (link_to "Logout", "/logout")
@@ -29,5 +29,13 @@
               = link_to image_tag("social-twitter-box-blue-icon.png"), "/auth/twitter"
               = link_to image_tag("social-facebook-box-blue-icon.png"), "/auth/facebook"
               = link_to image_tag("GMail-icon.png"), "/auth/google_oauth2"
+        .site_info
+          %span.site_info_items
+            Contato 
+          %span.site_info_items
+            Ajuda
+          .copyright
+            © QueroUmProfessor
+
 
 
