Changed new record edit profile link message.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
         %div
           -if session[:teacher_id]
             %br
-            = (link_to "Editar perfil#{' (Ainda sem especialidades cadastradas)' if current_user && !current_user.specialities.any?}", edit_teacher_path(session[:teacher_id])) + "  |  " + (link_to "Logout", "/logout")
+            = (link_to "Editar perfil#{' (Escolha uma ou mais especialidades para ativar seu cadastro)' if current_user && !current_user.specialities.any?}", edit_teacher_path(session[:teacher_id])) + "  |  " + (link_to "Logout", "/logout")
           -else
             É um professor e quer anunciar? Escolha sua forma de login ou cadastre-se usando um dos serviços:
             %span.login-icons
