Fixed info under specialities search field in home page.

--- a/app/views/teachers/home.html.haml
+++ b/app/views/teachers/home.html.haml
@@ -13,7 +13,7 @@
       %br
       Ex.: 'Inglês', 'Guitarra', 'Português'
     #city_search_field_info 
-      Insira o nome da sua cidade com a siglakdo estado. 
+      Insira o nome da sua cidade com a sigla do estado. 
       %br
       Ex.: 'Rio de Janeiro, RJ', 'Viçosa, MG'
 
